--- a/classUIs/UI_Cleric_P1999PVP.ini
+++ b/classUIs/UI_Cleric_P1999PVP.ini
@@ -3,10 +3,10 @@ UISkin=SlartiUI_Duxa
 AtlasSkin=Default
 [MainChat]
 INIVersion=1
-XPos1920x1080=1020
-YPos1920x1080=828
-Width1920x1080=421
-Height1920x1080=200
+XPos1920x1080=1093
+YPos1920x1080=792
+Width1920x1080=518
+Height1920x1080=267
 BGTint.red=255
 BGTint.green=255
 BGTint.blue=255
@@ -36,9 +36,9 @@ Locked=false
 [Chat 1]
 INIVersion=1
 XPos1920x1080=204
-YPos1920x1080=841
+YPos1920x1080=801
 Width1920x1080=421
-Height1920x1080=200
+Height1920x1080=254
 BGTint.red=255
 BGTint.green=255
 BGTint.blue=255
@@ -46,7 +46,7 @@ BGType=1
 Fades=true
 Delay=2000
 Duration=500
-Alpha=255
+Alpha=128
 FadeToAlpha=255
 Locked=false
 [RaidWindow]
@@ -127,8 +127,8 @@ Locked=false
 [PlayerWindow]
 Petbars=true
 INIVersion=1
-XPos1920x1080=814
-YPos1920x1080=678
+XPos1920x1080=840
+YPos1920x1080=674
 BGTint.red=255
 BGTint.green=255
 BGTint.blue=255
@@ -156,8 +156,8 @@ FadeToAlpha=255
 Locked=false
 [ActionsWindow]
 INIVersion=1
-XPos1920x1080=80
-YPos1920x1080=822
+XPos1920x1080=75
+YPos1920x1080=802
 BGTint.red=255
 BGTint.green=255
 BGTint.blue=255
@@ -165,7 +165,7 @@ BGType=1
 Fades=true
 Delay=2000
 Duration=500
-Alpha=255
+Alpha=138
 FadeToAlpha=255
 Locked=false
 Show=1
@@ -267,13 +267,13 @@ ChatWindow0_FontStyle=3
 ChatWindow0_Name=Main Chat
 ChatWindow1_Language=0
 ChannelMap0=0
-ChannelMap1=3
-ChannelMap2=3
-ChannelMap3=3
+ChannelMap1=0
+ChannelMap2=0
+ChannelMap3=0
 ChannelMap4=0
 ChannelMap5=0
-ChannelMap6=3
-ChannelMap7=3
+ChannelMap6=0
+ChannelMap7=0
 ChannelMap8=0
 ChannelMap9=1
 ChannelMap10=0
@@ -341,7 +341,7 @@ ChatWindow2_TellTarget=
 ChatWindow2_Scrollbar=1
 ChatWindow2_FontStyle=3
 ChatWindow2_Name=Chat  2
-ChatWindow3_Language=0
+ChatWindow3_Language=@42
 ChatWindow3_DefaultChannel=8
 ChatWindow3_ChatChannel=-1
 ChatWindow3_TellTarget=
@@ -353,8 +353,8 @@ INIVersion=1
 Locked=false
 [CursorAttachment]
 INIVersion=1
-XPos1920x1080=1095
-YPos1920x1080=291
+XPos1920x1080=670
+YPos1920x1080=897
 BGTint.red=255
 BGTint.green=255
 BGTint.blue=255
@@ -550,10 +550,10 @@ FadeToAlpha=255
 Locked=false
 [Chat 3]
 INIVersion=1
-XPos1920x1080=1453
-YPos1920x1080=832
-Width1920x1080=421
-Height1920x1080=200
+XPos1920x1080=1430
+YPos1920x1080=445
+Width1920x1080=342
+Height1920x1080=483
 BGTint.red=255
 BGTint.green=255
 BGTint.blue=255
